# giga-research-skill

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
docs/plans/: 2026-02-13-giga-research-implementation.md  2026-02-13-giga-research-skill-design.md
research-output/20260214-160334-ransomware-landscape-2025-2026/: comparison-matrix.md  meta.json  prompt.md  report.md
research-output/20260214-160334-ransomware-landscape-2025-2026/raw/: claude.json  claude.md  gemini.json  gemini.md  openai.json  openai.md
research-output/20260214-185409-quantum-computing-2025-2026/: comparison-matrix.md  meta.json  prompt.md  report.md  validation-log.md
research-output/20260214-185409-quantum-computing-2025-2026/raw/: CLAUDE.md  claude.json  claude.md  gemini.json  gemini.md  openai.json  openai.md
research-output/20260214-202128-zero-setup-e2e-test/: CLAUDE.md  comparison-matrix.md  meta.json  prompt.md  report.md  validation-log.md
research-output/20260214-202128-zero-setup-e2e-test/raw/: claude.json  claude.md  gemini.json  gemini.md  openai.json  openai.md
src/giga_research/: __init__.py  __main__.py  cli.py  config.py  errors.py  models.py
src/giga_research/clients/: CLAUDE.md  __init__.py  base.py  claude.py  gemini.py  openai_client.py
src/giga_research/orchestration/: __init__.py  (+1 more)
tests/: CLAUDE.md  conftest.py  test_cli.py  test_cli_orchestrate.py  test_config.py  test_errors.py  test_models.py
tests/test_clients/: test_base.py  test_claude.py  test_gemini.py  test_openai_client.py
tests/test_orchestration/: test_pipeline.py
tests/test_output/: test_writer.py
tests/test_reconciliation/: test_analyzer.py  test_report_builder.py
tests/test_research/: test_collector.py  test_dispatcher.py  test_progress.py
tests/test_validation/: test_citations.py  test_url_checker.py
(+13 files in other folders)
